--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>Chelsea Cole's Resume Site</title>
+
+  <link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
@@ -34,7 +37,7 @@
   </ul>
   <hr>
   <h3>Work Experience</h3>
-  <table>
+  <table cellspacing= "20">
     <thead>
       <tr>
         <th>Dates</th>
@@ -75,7 +78,7 @@
   <table>
     <tr>
       <td>
-        <table cellspacing = "10">
+        <table cellspacing="10">
           <tr>
             <td>JAVA programming</td>
             <td>&#11088;&#11088;&#11088;</td>
@@ -126,7 +129,7 @@
   </table>
   <hr>
   <a href="Hobbies.html">My Hobbies</a>
-  <br>
+
   <a href="Contact-Me.html">Contact Me</a>
 </body>
 
